# tnuxmusic

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: release.yml
Physics - nova9tekgrid/: Bad Morning.tly  Bad Situations.tly  Chroma.tly  Quarantine Overflow.tly  Vertigo.tly  album.tnux.json
assets/: resources.qrc
assets/linux/: tnuxmusic.desktop.in
assets/windows/: tnuxmusic.rc.in
docs/: LIBRARY_SCHEMA.md  TLY_FORMAT.md
examples/: demo.tly
qml/: Main.qml
scripts/: generate_icons.py  lrc_to_tly.js  merge_import_library.js  normalize_album.js  package_linux_deb.sh
src/: AlbumModel.cpp  AlbumModel.h  LibraryManager.cpp  LibraryManager.h  LyricModel.cpp  LyricModel.h  MetadataReader.cpp  MetadataReader.h  NcmImportService.cpp  NcmImportService.h  PlaybackQueue.cpp  PlaybackQueue.h  PlayerController.cpp  PlayerController.h  ScriptBridge.cpp  ScriptBridge.h  TlyParser.cpp  TlyParser.h  Track.cpp  Track.h  main.cpp
